This commit adds a thread cpu usage profiler.
The upcoming pilight version will contain a CPU / Memory watchdog.
When the CPU reamains too high, pilight will stop or terminate.
The only issue is that we didn't know what actually caused the
CPU spikes. A new feature was added that checks the CPU usage
of each individual thread. This makes debugging a lot easier.

This report will be generated whenever the CPU usage is above 70%

[Jun 03 15:16:53:949607] pilight-daemon: ERROR: ----- Thread Profiling -----
[Jun 03 15:16:53:950010] pilight-daemon: ERROR: - thread lirc: 0.028586%
[Jun 03 15:16:53:950358] pilight-daemon: ERROR: - thread dht22: 0.000000%
[Jun 03 15:16:53:950836] pilight-daemon: ERROR: - thread openweathermap: 0.000000%
[Jun 03 15:16:53:951135] pilight-daemon: ERROR: - thread rpi_temp: 0.000000%
[Jun 03 15:16:53:951614] pilight-daemon: ERROR: - thread sunriseset: 22.176795%
[Jun 03 15:16:53:952145] pilight-daemon: ERROR: - thread program: 0.000000%
[Jun 03 15:16:53:954759] pilight-daemon: ERROR: - thread xbmc: 0.115843%
[Jun 03 15:16:53:955259] pilight-daemon: ERROR: - thread second parser: 0.017591%
[Jun 03 15:16:53:959918] pilight-daemon: ERROR: - thread socket: 0.000000%
[Jun 03 15:16:53:961852] pilight-daemon: ERROR: - thread ssdp: 0.000000%
[Jun 03 15:16:53:962156] pilight-daemon: ERROR: - thread sender: 0.000000%
[Jun 03 15:16:53:966543] pilight-daemon: ERROR: - thread broadcaster: 0.000000%
[Jun 03 15:16:53:966892] pilight-daemon: ERROR: - thread updater: 0.065168%
[Jun 03 15:16:53:967219] pilight-daemon: ERROR: - thread 433gpio: 48.632867%
[Jun 03 15:16:53:973839] pilight-daemon: ERROR: - thread receive parser: 0.002599%
[Jun 03 15:16:53:974269] pilight-daemon: ERROR: - thread webserver worker #0: 0.041879%
[Jun 03 15:16:53:978243] pilight-daemon: ERROR: - thread webserver client: 0.157222%
[Jun 03 15:16:53:982225] pilight-daemon: ERROR: - thread webserver broadcast: 0.013493%
[Jun 03 15:16:53:985941] pilight-daemon: ERROR: - thread firmware upgrade

--- a/Makefile.old
+++ b/Makefile.old
@@ -48,7 +48,7 @@ $(SUBDIRS):
 all: $(LIBS) libpilight.so libpilight.a $(PROGAMS) 
 
 libpilight.so: $(LIBS)
-	$(GCC) $(LIBS) -shared -o libpilight.so -lpthread -lm -ldl
+	$(GCC) $(LIBS) -shared -o libpilight.so -lpthread -lm -ldl 
 	
 libpilight.a: $(LIBS)
 	$(CROSS_COMPILE)ar -rsc libpilight.a $(LIBS)
@@ -57,28 +57,28 @@ pilight-daemon: daemon.c $(INCLUDES) $(LIBS) libpilight.so
 	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-send: send.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-receive: receive.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-debug: debug.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-learn: learn.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-control: control.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-raw: raw.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 	
 pilight-uuid: uuid.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 pilight-flash: flash.c $(INCLUDES) $(LIBS) libpilight.so
-	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
+	$(GCC) $(CFLAGS) -o $@ $(patsubst pilight-%,%.c,$@) libpilight.so /usr/lib/arm-linux-gnueabihf/librt-2.13.so /usr/lib/arm-linux-gnueabihf/libz.so /usr/lib/arm-linux-gnueabihf/libdl.so
 
 install:
 	[ -d /usr/share/images/pilight/ ] && rm -r /usr/share/images/pilight/ || true
