--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -534,9 +534,11 @@ if(${MODULES} MATCHES "OFF")
 
 	target_link_libraries(pilight_shared ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_shared m)
+	target_link_libraries(pilight_shared rt)
 	target_link_libraries(pilight_shared ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight_static ${CMAKE_THREAD_LIBS_INIT})
 	target_link_libraries(pilight_static m)
+	target_link_libraries(pilight_static rt)
 	target_link_libraries(pilight_static ${CMAKE_DL_LIBS})
 
 	if(${UPDATE} MATCHES "ON")
@@ -585,7 +587,6 @@ if(${MODULES} MATCHES "OFF")
 	target_link_libraries(pilight-daemon pilight_shared)
 	target_link_libraries(pilight-daemon ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-daemon m)
-	target_link_libraries(pilight-daemon rt)
 	target_link_libraries(pilight-daemon ${CMAKE_THREAD_LIBS_INIT})
 
 	if(${UPDATE} MATCHES "ON")
@@ -596,56 +597,48 @@ if(${MODULES} MATCHES "OFF")
 	target_link_libraries(pilight-raw pilight_shared)
 	target_link_libraries(pilight-raw ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-raw m)
-	target_link_libraries(pilight-raw ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-raw ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-send send.c)
 	target_link_libraries(pilight-send pilight_shared)
 	target_link_libraries(pilight-send ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-send m)
-	target_link_libraries(pilight-send ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-send ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-control control.c)
 	target_link_libraries(pilight-control pilight_shared)
 	target_link_libraries(pilight-control ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-control m)
-	target_link_libraries(pilight-control ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-control ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-learn learn.c)
 	target_link_libraries(pilight-learn pilight_shared)
 	target_link_libraries(pilight-learn ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-learn m)
-	target_link_libraries(pilight-learn ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-learn ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-receive receive.c)
 	target_link_libraries(pilight-receive pilight_shared)
 	target_link_libraries(pilight-receive ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-receive m)
-	target_link_libraries(pilight-receive ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-receive ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-debug debug.c)
 	target_link_libraries(pilight-debug pilight_shared)
 	target_link_libraries(pilight-debug ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-debug m)
-	target_link_libraries(pilight-debug ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-debug ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-uuid uuid.c)
 	target_link_libraries(pilight-uuid pilight_shared)
 	target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-uuid m)
-	target_link_libraries(pilight-uuid ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-uuid ${CMAKE_THREAD_LIBS_INIT})
 
 	add_executable(pilight-flash flash.c)
 	target_link_libraries(pilight-flash pilight_shared)
 	target_link_libraries(pilight-flash ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-flash m)
-	target_link_libraries(pilight-flash ${CMAKE_DL_LIBS})
 	target_link_libraries(pilight-flash ${CMAKE_THREAD_LIBS_INIT})
 
 	if(EXISTS "/usr/local/sbin/pilight-send")
