Fixed small bug in log library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CPACK_DEB_COMPONENT_INSTALL TRUE)
 
 #Final compilation all platforms
 #Removing debugging for final compilation
-#set(CMAKE_SKIP_RPATH TRUE)
+set(CMAKE_SKIP_RPATH TRUE)
 set(CMAKE_EXE_LINKER_FLAGS " -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/")
 set(CMAKE_SHARED_LINKER_FLAGS " -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/")
 set(CMAKE_MODULE_LINKER_FLAGS " -Wl,-rpath=/usr/local/lib/,-rpath=/usr/lib/,-rpath=/lib/")
@@ -42,7 +42,7 @@ else()
 	message(STATUS "Looking for libz - found (${CMAKE_ZLIB_LIBS_INIT})")
 endif()
 
-if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv6")
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv6" OR ${CPACK_DEBIAN_PACKAGE_ARCHITECTURE} MATCHES "armhf")
 	if(${USE_SOFT_FLOAT} MATCHES "OFF")
 		set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE armhf)
 		set(CMAKE_C_FLAGS "-lz -Ofast -mfloat-abi=hard -mfpu=vfp -march=armv6 -ffast-math -Wfloat-equal -Wshadow -Wpointer-arith -Wcast-align -Wstrict-overflow=5 -Wwrite-strings -Waggregate-return -Wcast-qual -Wswitch-default -Wswitch-enum -Wformat=2 -g -Wall -Wconversion -Wunreachable-code -Wstrict-prototypes")
@@ -61,11 +61,15 @@ if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "amd64")
 endif()
 
 # Compile final sources for Ubuntu 64bit
-# set(CMAKE_C_FLAGS "-m64 -fPIC")
-# set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
+if(${CPACK_DEBIAN_PACKAGE_ARCHITECTURE} MATCHES "amd64")
+	set(CMAKE_C_FLAGS "-m64 -fPIC")
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
+endif()
 # Compile final sources for Ubuntu 32bit
-# set(CMAKE_C_FLAGS "-m32")
-# set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
+if(${CPACK_DEBIAN_PACKAGE_ARCHITECTURE} MATCHES "i386")
+	set(CMAKE_C_FLAGS "-m32")
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
+endif()
 
 # Start uninstaller generator
 function(WRITE_UNINSTALL_TARGET_SCRIPT)
@@ -575,7 +579,7 @@ if(${MODULESPACK} MATCHES "OFF")
 	endif()
 
 	if(${WEBSERVER} MATCHES "ON")
-		install(DIRECTORY web/ DESTINATION /usr/local/share/pilight COMPONENT webserver)
+		install(DIRECTORY web/ DESTINATION /usr/local/share/pilight COMPONENT webgui)
 	endif()
 
 	install(PROGRAMS init/pilight.initd DESTINATION /etc/init.d/ RENAME pilight)
