Protocol OWFS_DS18B20 - 1 wire DS18B20 connected using OWFS (http://owfs.org), works with 1-wire master like DS2482-100 and DS2482-200 notes: * the mounting path of OWFS is /mnt/1wire/ * the id of sensor can include big letters and should have "28." prefix for ex."28.1C2A93050000"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,6 +207,11 @@ if(${PROTOCOL_DS18S20} MATCHES "OFF")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/ds18s20.c")
 endif()
 
+if(${PROTOCOL_OWFS_DS18B20} MATCHES "OFF")
+	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/owfs_ds18b20.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/owfs_ds18b20.c")
+endif()
+
 if(${PROTOCOL_DHT22} MATCHES "OFF")
 	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/dht22.h")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/dht22.c")
