Addes support for the Alecto WX500 protocol

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,11 @@ if(${PROTOCOL_ALECTO_WSD17} MATCHES "OFF")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/alecto_wsd17.c")
 endif()
 
+if(${PROTOCOL_ALECTO_WX500} MATCHES "OFF")
+	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/alecto_wx500.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/alecto_wx500.c")
+endif()
+
 if(${PROTOCOL_COGEX_SWITCH} MATCHES "OFF"
 	AND ${PROTOCOL_KAKU_SWITCH_OLD} MATCHES "OFF"
 	AND ${PROTOCOL_BYEBYESTANDBYE_SWITCH} MATCHES "OFF"
