Chacon 349xx Alarm protocol partially implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -401,6 +401,11 @@ if(${PROTOCOL_XBMC} MATCHES "OFF")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/xbmc.c")
 endif()
 
+if(${PROTOCOL_CHACON_AL} MATCHES "OFF")
+	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/chacon_al.h")
+	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/chacon_al.c")
+endif()
+
 if(${PROTOCOL_LIRC} MATCHES "OFF")
 	list(REMOVE_ITEM protocol_headers "${PROJECT_SOURCE_DIR}/libs/protocols/lirc.h")
 	list(REMOVE_ITEM protocol "${PROJECT_SOURCE_DIR}/libs/protocols/lirc.c")
